--- a/src/components/FluidBackground.module.css
+++ b/src/components/FluidBackground.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
   z-index: -1;
   background-color: var(--color-bg-dark);
   overflow: hidden;
