--- a/src/components/HorizontalScroll.module.css
+++ b/src/components/HorizontalScroll.module.css
@@ -1,6 +1,6 @@
 .horizontalSection {
   position: relative;
-  height: 100dvh;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
   background-color: transparent;
@@ -34,7 +34,7 @@
 
 .track {
   display: flex;
-  height: 100dvh;
+  height: 100vh;
   width: max-content;
   padding: 0 5vw;
   align-items: center;
@@ -47,6 +47,14 @@
   height: 60vh;
   margin-right: 5vw;
   flex-shrink: 0;
+}
+
+@media (max-width: 767px) {
+  .itemWrapper {
+    width: 85vw;
+    min-width: unset;
+    height: 50vh;
+  }
 }
 
 .itemInner {
@@ -74,16 +82,4 @@
   justify-content: center;
   font-family: var(--font-playfair);
   font-size: 5rem;
-}
-
-@media screen and (max-width: 767px) {
-  .itemWrapper {
-    width: 85vw;
-    min-width: 0;
-    height: 50vh;
-  }
-  
-  .placeholderImage {
-    font-size: 3rem;
-  }
 }
